<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/productFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/product_name_hint"
        android:inputType="text" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Quantity EditText -->
            <EditText
                android:id="@+id/quantityFrag"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/product_quantity_hint"
                android:inputType="numberDecimal" />

            <!-- Spinner for Unit Selection -->
            <Spinner
                android:id="@+id/product_typeSpinner"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/spinner_background"
                android:entries="@array/product_types"
                android:prompt="@string/select_product_type"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/unitSpinner"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:prompt="@string/select_unit"
                android:entries="@array/empty_array"
                android:background="@drawable/spinner_background"
                android:spinnerMode="dropdown"/>

        </TableRow>

    </TableLayout>


    <EditText
        android:id="@+id/storeFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quantityFrag"
        android:layout_centerHorizontal="true"
        android:hint="@string/product_store_hint"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/setdateFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/storeFrag"
        android:layout_centerHorizontal="true"
        android:hint="@string/product_date_hint"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/priceFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setdateFrag"
        android:layout_centerHorizontal="true"
        android:hint="@string/product_price_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceFrag"
        android:layout_centerHorizontal="true"
        android:text="@string/add_product_button" />



</LinearLayout>